--- a/_pages/research/vt2020.md
+++ b/_pages/research/vt2020.md
@@ -23,7 +23,17 @@ Thank you for attending my session titled "A meta-presentation: Tools for buildi
       * My old adviser, Mike McDaniel, who was a student of Frank Schmidt, prepared this script.
    
    * <a href="https://metabus.org">Link to the metaBUS database</a><br>
-
+      * The following are unique identifiers for common bivariate relations in IO/OB/HR research (i.e., taxonomic pairs) that can be used to demonstrate metaBUS's "targeted meta-analysis" function:
+         * 20072 (Job satisfaction) | 40055 (Individual job performance)
+         * 20438 (Conscientiousness) | 10199 (Organizational citizenship behavior)
+         * 20432 (State stress) | 20227 (Absenteeism/Tardiness)
+         
+      * Use the following taxonomic codes to perform an "exploratory meta-analysis:"
+         * 20488 (Physical characteristics) 
+         * 20458 (Sex/Gender)
+         * 20375 (Ability)
+         * 20442 (Emotional stability)
+         
    * <a href="https://metasen.shinyapps.io/gen1/">Link to the Meta-Sen app</a><br>
       * The following data sets can be used to illustrate the functionality of the Meta-Sen app:<br>
          * <a href="http://jamiefield.github.io/files/Sample Data Set 1.csv?dl=0">Sample Data Set 1</a><br>
