--- a/_pages/research/vt2020.md
+++ b/_pages/research/vt2020.md
@@ -11,7 +11,7 @@ Thank you for attending my session titled "A meta-presentation: Tools for buildi
 <center><p><img src= '/images/Stacks.jpg'></p></center>
 
 ## Presentation materials
-   * INSERT LINK TO POWERPOINT HERE
+   * LINK TO POWERPOINT PRESENTATION WILL APPEAR HERE BEFORE THE TALK
 
 ## Software and meta-analysis tools
    * <a href="http://jamiefield.github.io/files/Bosco_multi-purpose_meta-analysis.xlsm?dl=0">Frank Bosco's (VCU) Hunter and Schmidt meta-analysis software</a><br>
