--- a/_pages/research/vt2020.md
+++ b/_pages/research/vt2020.md
@@ -14,7 +14,7 @@ Thank you for attending my session titled "A meta-presentation: Tools for buildi
    * LINK TO POWERPOINT PRESENTATION WILL APPEAR HERE BEFORE THE TALK
 
 ## Software and meta-analysis tools
-   * <a href="http://jamiefield.github.io/files/Bosco_multi-purpose_meta-analysis.xlsm?dl=0">Frank Bosco's (VCU) Hunter and Schmidt meta-analysis software</a><br>
+   * <a href="http://jamiefield.github.io/files/Bosco_multi-purpose_meta-analysis.xlsm?dl=0">Frank Bosco's (VCU) Hunter and Schmidt meta-analysis software</a>
       * Frank's software is very easy to use and has been cited in a few papers
       * It can perform a variety of analysis (e.g., bare-bones meta-analysis, psychometric meta-analysis, moderator tests)
    * <a href="http://jamiefield.github.io/files/Field R Hedges and Olkin meta-analysis.R?dl=0">Annotated R code that conducts a meta-analysis using the metafor package</a><br>
