--- a/_pages/research/vt2020.md
+++ b/_pages/research/vt2020.md
@@ -15,11 +15,11 @@ Thank you for attending my session titled "A meta-presentation: Tools for buildi
 
 ## Software and meta-analysis tools
    * <a href="http://jamiefield.github.io/files/Bosco_multi-purpose_meta-analysis.xlsm?dl=0">Frank Bosco's (VCU) Hunter and Schmidt meta-analysis software</a>
-      * Frank's software is very easy to use and has been cited in a few papers
+      * Frank's software is very easy to use and has been cited in several papers
       * It can perform a variety of analysis (e.g., bare-bones meta-analysis, psychometric meta-analysis, moderator tests)
-   * <a href="http://jamiefield.github.io/files/Field R Hedges and Olkin meta-analysis.R?dl=0">Annotated R code that conducts a meta-analysis using the metafor package</a><br>
+   * <a href="http://jamiefield.github.io/files/Field R Hedges and Olkin meta-analysis.R?dl=0">Annotated R code that conducts a meta-analysis using the metafor package</a>
       * I prepared this code. It relies on Viechtbauer's metafor package to conduct a meta-analysis using the H&O tradition
-   * <a href="http://jamiefield.github.io/files/McDaniel R psychometric meta-analysis program.R?dl=0">Annotated R code that conducts a psychometric meta-analysis </a><br>
+   * <a href="http://jamiefield.github.io/files/McDaniel R psychometric meta-analysis program.R?dl=0">Annotated R code that conducts a psychometric meta-analysis </a>
       * My old adviser, Mike McDaniel, who was a student of Frank Schmidt, prepared this script.
    
    * <a href="https://metabus.org">Link to the metaBUS database</a><br>
