--- a/_pages/research/vt2020.md
+++ b/_pages/research/vt2020.md
@@ -24,7 +24,7 @@ Thank you for attending my session titled "A meta-presentation: Tools for buildi
    
    * <a href="https://metabus.org">Link to the metaBUS database</a><br>
       * The following are unique identifiers for common bivariate relations in IO/OB/HR research (i.e., taxonomic pairs) that can be used to demonstrate metaBUS's "targeted meta-analysis" function:
-         * 20072 (Job satisfaction) | 40055 (Individual job performance)
+         * 20072 (Job satisfaction) & 40055 (Individual job performance)
          * 20438 (Conscientiousness) | 10199 (Organizational citizenship behavior)
          * 20432 (State stress) | 20227 (Absenteeism/Tardiness)
          
