--- a/_pages/research/vt2020.md
+++ b/_pages/research/vt2020.md
@@ -15,7 +15,7 @@ Thank you for attending my session titled "A meta-presentation: Tools for buildi
 
 ## Software and meta-analysis tools
    * <a href="http://jamiefield.github.io/files/Bosco_multi-purpose_meta-analysis.xlsm?dl=0">Frank Bosco's (VCU) Hunter and Schmidt meta-analysis software</a>
-      * Frank's software is very easy to use and has been cited in several papers
+      * <li>Frank's software is very easy to use and has been cited in several papers</li>
       * It can perform a variety of analysis (e.g., bare-bones meta-analysis, psychometric meta-analysis, moderator tests)
    * <a href="http://jamiefield.github.io/files/Field R Hedges and Olkin meta-analysis.R?dl=0">Annotated R code that conducts a meta-analysis using the metafor package</a>
       * I prepared this code. It relies on Viechtbauer's metafor package to conduct a meta-analysis using the H&O tradition
@@ -24,9 +24,9 @@ Thank you for attending my session titled "A meta-presentation: Tools for buildi
    
    * <a href="https://metabus.org">Link to the metaBUS database</a><br>
       * The following are unique identifiers for common bivariate relations in IO/OB/HR research (i.e., taxonomic pairs) that can be used to demonstrate metaBUS's "targeted meta-analysis" function:
-         * 20072 (Job satisfaction) & 40055 (Individual job performance)
-         * 20438 (Conscientiousness) | 10199 (Organizational citizenship behavior)
-         * 20432 (State stress) | 20227 (Absenteeism/Tardiness)
+         * 20072 (Job satisfaction) || 40055 (Individual job performance)
+         * 20438 (Conscientiousness) || 10199 (Organizational citizenship behavior)
+         * 20432 (State stress) || 20227 (Absenteeism/Tardiness)
          
       * Use the following taxonomic codes to perform an "exploratory meta-analysis:"
          * 20488 (Physical characteristics) 
