--- a/_pages/research/vt2020.md
+++ b/_pages/research/vt2020.md
@@ -14,19 +14,20 @@ Thank you for attending my session titled "A meta-presentation: Tools for buildi
    * LINK TO POWERPOINT PRESENTATION WILL APPEAR HERE BEFORE THE TALK
 
 ## Software and meta-analysis tools
-   * <a href="http://jamiefield.github.io/files/Bosco_multi-purpose_meta-analysis.xlsm?dl=0">Frank Bosco's (VCU) Hunter and Schmidt meta-analysis software</a>
-      * <ul><li>Frank's software is very easy to use and has been cited in several papers</li></ul>
-      * It can perform a variety of analysis (e.g., bare-bones meta-analysis, psychometric meta-analysis, moderator tests)
+    * <a href="http://jamiefield.github.io/files/Bosco_multi-purpose_meta-analysis.xlsm?dl=0">Frank Bosco's (VCU) Hunter and Schmidt meta-analysis software</a>
+       * Frank's software is very easy to use and has been cited in several papers
+       * It can perform a variety of analysis (e.g., bare-bones meta-analysis, psychometric meta-analysis, moderator tests)
+      
    * <a href="http://jamiefield.github.io/files/Field R Hedges and Olkin meta-analysis.R?dl=0">Annotated R code that conducts a meta-analysis using the metafor package</a>
       * I prepared this code. It relies on Viechtbauer's metafor package to conduct a meta-analysis using the H&O tradition
    * <a href="http://jamiefield.github.io/files/McDaniel R psychometric meta-analysis program.R?dl=0">Annotated R code that conducts a psychometric meta-analysis </a>
-      * My old adviser, Mike McDaniel, who was a student of Frank Schmidt, prepared this script.
+      * My old adviser, Mike McDaniel, prepared this script.
    
    * <a href="https://metabus.org">Link to the metaBUS database</a><br>
       * The following are unique identifiers for common bivariate relations in IO/OB/HR research (i.e., taxonomic pairs) that can be used to demonstrate metaBUS's "targeted meta-analysis" function:
-         * 20072 (Job satisfaction) || 40055 (Individual job performance)
-         * 20438 (Conscientiousness) || 10199 (Organizational citizenship behavior)
-         * 20432 (State stress) || 20227 (Absenteeism/Tardiness)
+         * Tax ID 1: 20072 (Job satisfaction); Tax ID 2: 40055 (Individual job performance)
+         * Tax ID 1: 20438 (Conscientiousness); Tax ID 2: 10199 (Organizational citizenship behavior)
+         * Tax ID 1: 20432 (State stress); Tax ID 2: 20227 (Absenteeism/Tardiness)
          
       * Use the following taxonomic codes to perform an "exploratory meta-analysis:"
          * 20488 (Physical characteristics) 
