--- a/_pages/research/vt2020.md
+++ b/_pages/research/vt2020.md
@@ -23,19 +23,20 @@ Thank you for attending my session titled "A meta-presentation: Tools for buildi
    
    * <a href="http://jamiefield.github.io/files/McDaniel R psychometric meta-analysis program.R?dl=0">Annotated R code that conducts a psychometric meta-analysis </a>
       * My old adviser, Mike McDaniel, prepared this script.
-```# This program is conducts an individualy correct meta-analysis of correlations that includes``` 
-```# reliability correction of both X and Y and indirect range restrictions corrections for```
-```# indirect range restriction on X```
-```#``` 
-```# Created by Mike McDaniel (mamcdani@vcu.edu)   Version July 5, 2016```
 ```
+# This program is conducts an individualy correct meta-analysis of correlations that includes 
+# reliability correction of both X and Y and indirect range restrictions corrections for
+# indirect range restriction on X
+# 
+# Created by Mike McDaniel (mamcdani@vcu.edu)   Version July 5, 2016```
+
 #Your variable names should be these:
 #N  = sample size
 #r  = correlation 
 #u = ratio of restricted to unrestricted standard deviation on x
 #rxxi = relaibility of X in a restricted sample
-#ryy = Reliability of Y```
-
+#ryy = Reliability of Y
+```
    
    * <a href="https://metabus.org">Link to the metaBUS database</a><br>
       * The following are unique identifiers for common bivariate relations in IO/OB/HR research (i.e., taxonomic pairs) that can be used to demonstrate metaBUS's "targeted meta-analysis" function:
