--- a/_pages/research/vt2020.md
+++ b/_pages/research/vt2020.md
@@ -19,7 +19,7 @@ Thank you for attending my session titled "A meta-presentation: Tools for buildi
        * It can perform a variety of analysis (e.g., bare-bones meta-analysis, psychometric meta-analysis, moderator tests)
       
    * <a href="http://jamiefield.github.io/files/Field R Hedges and Olkin meta-analysis.R?dl=0">Annotated R code that conducts a meta-analysis using the metafor package</a>
-      * I prepared this code. It relies on Viechtbauer's metafor package to conduct a meta-analysis using the H&O tradition
+      * I prepared this code. It relies on Viechtbauer's metafor package to conduct a meta-analysis using the H&O tradition<br>
  ```
  # This program conducts a meta-analysis using the Hedges and Olkin approach 
 
@@ -83,9 +83,10 @@ library(metafor)
   OUTPUT.naive.RE.I2 <- res$I2
   OUTPUT.naive.RE.tau <- res$tau2^.5
 ```
+<br>
 
    * <a href="http://jamiefield.github.io/files/McDaniel R psychometric meta-analysis program.R?dl=0">Annotated R code that conducts a psychometric meta-analysis </a>
-      * My old adviser, Mike McDaniel, prepared this script.
+      * My old adviser, Mike McDaniel, prepared this script.<br>
 ```
 # This program is conducts an individualy correct meta-analysis of correlations that includes 
 # reliability correction of both X and Y and indirect range restrictions corrections for
@@ -318,7 +319,7 @@ print(paste("of the estimated population correlation."))
 
 
 ```
-   
+<br>
    * <a href="https://metabus.org">Link to the metaBUS database</a><br>
       * The following are unique identifiers for common bivariate relations in IO/OB/HR research (i.e., taxonomic pairs) that can be used to demonstrate metaBUS's "targeted meta-analysis" function:
          * Tax ID 1: 20072 (Job satisfaction); Tax ID 2: 40055 (Individual job performance)
