--- a/_pages/research/vt2020.md
+++ b/_pages/research/vt2020.md
@@ -20,8 +20,9 @@ Thank you for attending my session titled "A meta-presentation: Tools for buildi
       
    * <a href="http://jamiefield.github.io/files/Field R Hedges and Olkin meta-analysis.R?dl=0">Annotated R code that conducts a meta-analysis using the metafor package</a>
       * I prepared this code. It relies on Viechtbauer's metafor package to conduct a meta-analysis using the H&O tradition<br>
+ 
  ```
- # This program conducts a meta-analysis using the Hedges and Olkin approach 
+# This program conducts a meta-analysis using the Hedges and Olkin approach 
 
 # Created by Jamie Field (james.field2@mail.wvu.edu)   Version Feb, 2020
 # Credit should also be given to Dr. Frank Bosco (fabosco@vcu.edu)
@@ -322,9 +323,15 @@ print(paste("of the estimated population correlation."))
 <br>
    * <a href="https://metabus.org">Link to the metaBUS database</a><br>
       * The following are unique identifiers for common bivariate relations in IO/OB/HR research (i.e., taxonomic pairs) that can be used to demonstrate metaBUS's "targeted meta-analysis" function:
-         * Tax ID 1: 20072 (Job satisfaction); Tax ID 2: 40055 (Individual job performance)
-         * Tax ID 1: 20438 (Conscientiousness); Tax ID 2: 10199 (Organizational citizenship behavior)
-         * Tax ID 1: 20432 (State stress); Tax ID 2: 20227 (Absenteeism/Tardiness)
+         * Targeted meta-analysis #1
+            * Tax ID 1: 20072 (Job satisfaction) 
+            * Tax ID 2: 40055 (Individual job performance)
+         * Targeted meta-analysis #2
+            * Tax ID 1: 20438 (Conscientiousness)
+            * Tax ID 2: 10199 (Organizational citizenship behavior)
+         * Targeted meta-analysis #3
+            * Tax ID 1: 20432 (State stress)
+            * Tax ID 2: 20227 (Absenteeism/Tardiness)
          
       * Use the following taxonomic codes to perform an "exploratory meta-analysis:"
          * 20488 (Physical characteristics) 
