--- a/_pages/research/vt2020.md
+++ b/_pages/research/vt2020.md
@@ -4,7 +4,7 @@ title: "First Friday Presentation on Meta-Analysis"
 permalink: /research/vt2020
 author_profile: true
 ---
-<b>Welcome!</b><br>
+<b>Welcome!TEST</b><br>
 Thank you for attending my session titled "A meta-presentation: Tools for building trustworthy cumulative knowledge." Below I provide some resources that hopefully will improve your knowledge of meta-analysis. Please stay in touch -- I will be happy to answer future quetions, troubleshoot your meta-analysis problems, and collaborate on research projects. Feel free to <a href="https://twitter.com/fieldjamie?lang=en">follow me on Twitter</a> or to email me with follow-up questions, feedback, etc.: <a href = "mailto: james.field2@mail.wvu.edu">james.field2@mail.wvu.edu</a> <br>
 
 <center><b>What does cumulative scientific knowledge look like?</b></center>
