--- a/_pages/research/vt2020.md
+++ b/_pages/research/vt2020.md
@@ -4,7 +4,7 @@ title: "First Friday Presentation on Meta-Analysis"
 permalink: /research/vt2020
 author_profile: true
 ---
-<b>Welcome!TEST</b><br>
+<b>Welcome!</b><br>
 Thank you for attending my session titled "A meta-presentation: Tools for building trustworthy cumulative knowledge." Below I provide some resources that hopefully will improve your knowledge of meta-analysis. Please stay in touch -- I will be happy to answer future quetions, troubleshoot your meta-analysis problems, and collaborate on research projects. Feel free to <a href="https://twitter.com/fieldjamie?lang=en">follow me on Twitter</a> or to email me with follow-up questions, feedback, etc.: <a href = "mailto: james.field2@mail.wvu.edu">james.field2@mail.wvu.edu</a> <br>
 
 <center><b>What does cumulative scientific knowledge look like?</b></center>
@@ -20,7 +20,7 @@ Thank you for attending my session titled "A meta-presentation: Tools for buildi
       
    * <a href="http://jamiefield.github.io/files/Field R Hedges and Olkin meta-analysis.R?dl=0">Annotated R code that conducts a meta-analysis using the metafor package</a>
       * I prepared this code. It relies on Viechtbauer's metafor package to conduct a meta-analysis using the H&O tradition<br>
- 
+      
  ```
 # This program conducts a meta-analysis using the Hedges and Olkin approach 
 
@@ -42,7 +42,6 @@ library(metafor)
 # Import a meta-analytic data file
 # Uncomment the following line by removing the "#" -- this will active the command
 #dat <- read.csv("INSERT PATH TO YOUR FOLDER HERE/nameofdatafile.csv") #Frank's path
-
 
  datUploaded <- dat
  datRowsOrig <- nrow(dat)
@@ -84,28 +83,11 @@ library(metafor)
   OUTPUT.naive.RE.I2 <- res$I2
   OUTPUT.naive.RE.tau <- res$tau2^.5
 ```
-<br>
 
    * <a href="http://jamiefield.github.io/files/McDaniel R psychometric meta-analysis program.R?dl=0">Annotated R code that conducts a psychometric meta-analysis </a>
       * My old adviser, Mike McDaniel, prepared this script.<br>
+      
 ```
-# This program is conducts an individualy correct meta-analysis of correlations that includes 
-# reliability correction of both X and Y and indirect range restrictions corrections for
-# indirect range restriction on X
-# 
-# Created by Mike McDaniel (mamcdani@vcu.edu)   Version July 5, 2016
-
-#Your variable names should be these:
-#N  = sample size
-#r  = correlation 
-#u = ratio of restricted to unrestricted standard deviation on x
-#rxxi = relaibility of X in a restricted sample
-#ryy = Reliability of Y
-
-## if you are not correcting for range restruction, make the value of u for all observations to be 1
-
-##  Bring this code into your program with a source command
-
 # This program is conducts an individualy correct meta-analysis of correlations that includes 
 # reliability correction of both X and Y and indirect range restrictions corrections for
 # indirect range restriction on X
@@ -304,10 +286,8 @@ Output.Vector <- c(Output.Nothing,Output.Nothing,Outuput.k, Output.sumN, Output.
                    Output.standard.error.of.rho, CI.95per )
 Output.Vector
 
-
 output.dataframe <- data.frame(Output.Labels, Output.Vector)
 print(output.dataframe)
-
 
 #write table to clipboard than to Excel then, optionally, can move it into Word
 write.table(output.dataframe,file="clipboard",sep="\t",col.names=NA)
@@ -317,10 +297,8 @@ print(paste("Output has been copied to the clipboard. Go to Excel or other sprea
 print(paste("In the data file   dat   one can find dat$Population.r which is the estimated population"))
 print(paste("correlation and dat$Pop.r.sampling.variance which is the estimated sampling error variance"))
 print(paste("of the estimated population correlation."))
-
-
 ```
-<br>
+
    * <a href="https://metabus.org">Link to the metaBUS database</a><br>
       * The following are unique identifiers for common bivariate relations in IO/OB/HR research (i.e., taxonomic pairs) that can be used to demonstrate metaBUS's "targeted meta-analysis" function:
          * Targeted meta-analysis #1
