--- a/_pages/research/vt2020.md
+++ b/_pages/research/vt2020.md
@@ -5,7 +5,7 @@ permalink: /research/vt2020
 author_profile: true
 ---
 <b>Welcome!</b><br>
-Thank you for attending my session titled "A meta-presentation: Tools for building trustworthy cumulative knowledge." Below I provide some resources that hopefully will improve your knowledge of meta-analysis. Please stay in touch -- I will be happy to answer future quetions, troubleshoot your meta-analysis problems, and collaborate on research projects. Feel free to <a href="https://twitter.com/fieldjamie?lang=en">follow me on Twitter</a> or to email me with follow-up questions, feedback, etc.: <a href = "mailto: james.field2@mail.wvu.edu">james.field2@mail.wvu.edu</a> <br>
+Thank you for attending my session titled "A meta-presentation: Tools for building trustworthy cumulative knowledge." Below I provide some resources that hopefully will improve your knowledge of meta-analysis. Please let me know if there is anything that I can help with in the future -- I will be happy to answer quetions, troubleshoot your meta-analysis problems, and collaborate on research projects. Feel free to <a href="https://twitter.com/fieldjamie?lang=en">follow me on Twitter</a> or to email me with follow-up questions, feedback, etc.: <a href = "mailto: james.field2@mail.wvu.edu">james.field2@mail.wvu.edu</a> <br>
 
 <center><b>What does cumulative scientific knowledge look like?</b></center>
 <center><p><img src= '/images/Stacks.jpg'></p></center>
@@ -299,7 +299,8 @@ print(paste("correlation and dat$Pop.r.sampling.variance which is the estimated 
 print(paste("of the estimated population correlation."))
 ```
 
-   * <a href="https://metabus.org">Link to the metaBUS database</a><br>
+   * <a href="https://metabus.org">Link to the metaBUS website</a><br>
+      * <a href="https://shiny.metabus.org/shiny">Sign up for a free user account here</a><br>
       * The following are unique identifiers for common bivariate relations in IO/OB/HR research (i.e., taxonomic pairs) that can be used to demonstrate metaBUS's "targeted meta-analysis" function:
          * Targeted meta-analysis #1
             * Tax ID 1: 20072 (Job satisfaction) 
