--- a/_pages/research/vt2020.md
+++ b/_pages/research/vt2020.md
@@ -325,6 +325,7 @@ print(paste("of the estimated population correlation."))
          * <a href="http://jamiefield.github.io/files/Sample Data Set 3.csv?dl=0">Sample Data Set 3</a><br>
 
 ## Potentially helpful articles and other materials
+   * <a href="http://jamiefield.github.io/files/Appelbaum et al., (2018). Journal article reporting standards for quantitative research in psychology (includes MARS).pdf?dl=0">Appelbaum et al., (2018). See pages 17-19 for information on meta-analytic reporting standards (MARS)</a><br>
    * <a href="http://jamiefield.github.io/files/PRISMA 2009 checklist.pdf?dl=0">PRISMA checklist</a><br>
    * <a href="http://jamiefield.github.io/files/PRISMA 2009 flow diagram.pdf?dl=0">PRISMA 2009 flow diagram</a><br>
    * <a href="http://jamiefield.github.io/files/Moher et al. (2015). Preferred reporting items for systematic review and meta-analysis protocols (PRISMA-P) 2015 statement.pdf?dl=0">Moher et al. (2015). Preferred reporting items for systematic review and meta-analysis protocols (PRISMA-P) 2015 statement</a><br>
