--- a/_pages/research/vt2020.md
+++ b/_pages/research/vt2020.md
@@ -21,7 +21,7 @@ Thank you for attending my session titled "A meta-presentation: Tools for buildi
    * <a href="http://jamiefield.github.io/files/Field R Hedges and Olkin meta-analysis.R?dl=0">Annotated R code that conducts a meta-analysis using the metafor package</a>
       * I prepared this code. It relies on Viechtbauer's metafor package to conduct a meta-analysis using the H&O tradition<br>
   
-<pre>
+<pre><code>
 # This program conducts a meta-analysis using the Hedges and Olkin approach 
 # Created by Jamie Field (james.field2@mail.wvu.edu)   Version Feb, 2020
 # Credit should also be given to Dr. Frank Bosco (fabosco@vcu.edu)
@@ -81,7 +81,7 @@ library(metafor)
   OUTPUT.naive.RE.QE <- res$QE
   OUTPUT.naive.RE.I2 <- res$I2
   OUTPUT.naive.RE.tau <- res$tau2^.5
-</pre>
+</code></pre>
 
    * <a href="http://jamiefield.github.io/files/McDaniel R psychometric meta-analysis program.R?dl=0">Annotated R code that conducts a psychometric meta-analysis </a>
       * My old adviser, Mike McDaniel, prepared this script.<br>
