--- a/_pages/research/vt2020.md
+++ b/_pages/research/vt2020.md
@@ -21,7 +21,7 @@ Thank you for attending my session titled "A meta-presentation: Tools for buildi
    * <a href="http://jamiefield.github.io/files/Field R Hedges and Olkin meta-analysis.R?dl=0">Annotated R code that conducts a meta-analysis using the metafor package</a>
       * I prepared this code. It relies on Viechtbauer's metafor package to conduct a meta-analysis using the H&O tradition<br>
   
-<p><pre><code>
+<pre><code>
 # This program conducts a meta-analysis using the Hedges and Olkin approach 
 # Created by Jamie Field (james.field2@mail.wvu.edu)   Version Feb, 2020
 # Credit should also be given to Dr. Frank Bosco (fabosco@vcu.edu)
@@ -81,12 +81,12 @@ library(metafor)
   OUTPUT.naive.RE.QE <- res$QE
   OUTPUT.naive.RE.I2 <- res$I2
   OUTPUT.naive.RE.tau <- res$tau2^.5
-</code></pre></p>
+</code></pre>
 
    * <a href="http://jamiefield.github.io/files/McDaniel R psychometric meta-analysis program.R?dl=0">Annotated R code that conducts a psychometric meta-analysis </a>
       * My old adviser, Mike McDaniel, prepared this script.<br>
       
-```
+<pre><code>
 # This program is conducts an individualy correct meta-analysis of correlations that includes 
 # reliability correction of both X and Y and indirect range restrictions corrections for
 # indirect range restriction on X
@@ -296,7 +296,7 @@ print(paste("Output has been copied to the clipboard. Go to Excel or other sprea
 print(paste("In the data file   dat   one can find dat$Population.r which is the estimated population"))
 print(paste("correlation and dat$Pop.r.sampling.variance which is the estimated sampling error variance"))
 print(paste("of the estimated population correlation."))
-```
+</code></pre>
 
    * <a href="https://metabus.org">Link to the metaBUS website</a><br>
       * <a href="https://shiny.metabus.org/shiny">Sign up for a free user account here</a><br>
