--- a/_pages/research/vt2020.md
+++ b/_pages/research/vt2020.md
@@ -11,7 +11,7 @@ Thank you for attending my session titled "A meta-presentation: Tools for buildi
 <center><p><img src= '/images/Stacks.jpg'></p></center>
 
 ## Presentation materials
-   * <a href="http://jamiefield.github.io/files/A meta-presentation2.pdf?dl=0">Link to PowerPoint presentation</a><br>
+   * <a href="http://jamiefield.github.io/files/A meta presentation2.pdf?dl=0">Link to PowerPoint presentation</a><br>
       * Note that the linked file is a PDF. If you want the .pptx version, please <a href = "mailto: james.field2@mail.wvu.edu">email me</a> <br> 
 
 ## Meta-analysis tools
